--- a/src/app/user-view/components/about/about.component.html
+++ b/src/app/user-view/components/about/about.component.html
@@ -1,6 +1,7 @@
 
-<body class="">
+
     <app-header></app-header>
+
     <div class="section-container">
         <div class="container">
           <div class="row">
@@ -37,15 +38,4 @@
         </div>
       </div>
     
-    
-    <footer class="footer-container text-center">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-12">
-            <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
-          </div>
-        </div>
-      </div>
-    </footer>
-    
-    </body>
+      <app-footer></app-footer> 
