--- a/src/app/user-view/components/common/footer/footer.component.html
+++ b/src/app/user-view/components/common/footer/footer.component.html
@@ -1,1 +1,9 @@
-<p>footer works!</p>
+<footer class="footer-container text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <p>B V K Prasanth </p>
+        </div>
+      </div>
+    </div>
+  </footer>
