--- a/src/app/user-view/components/works/works.component.html
+++ b/src/app/user-view/components/works/works.component.html
@@ -116,18 +116,4 @@
     </div>
   </div>
   
-  
-  <footer class="footer-container text-center">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12">
-          <p>© B V K Prasanth</p>
-        </div>
-      </div>
-    </div>
-    <script>
-      document.addEventListener("DOMContentLoaded", function (event) {
-         navActivePage();
-      });
-    </script>
-  </footer>
+  <app-footer></app-footer> 
