--- a/src/app/user-view/components/common/header/header.component.html
+++ b/src/app/user-view/components/common/header/header.component.html
@@ -10,7 +10,7 @@
   
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav ">
-            <li><a href="./index.html" title="">01 : Home</a></li>
+            <li><a [routerLink]="['']" title="">01 : Home</a></li>
             <li><a [routerLink]="['/works']" title="">02 : Works</a></li>
             <li><a [routerLink]="['/about']" title="">03 : About me</a></li>
             <li><a [routerLink]="['/contact']" title="">04 : Contact</a></li>
